# math-expression-parser-and-executer

./: CMakeLists.txt  main.c
include/: build_result.h  builder.h  calculate.h  custom_builder.h  node.h  parsing.h  print.h  rules.h  source.h  stack.h  to-string.h  token.h  types.h  utils.h  vector.h
src/: build_result.c  calculate.c  custom_builder.c  main.c  node.c  parsing.c  print.c  rules.c  source.c  stack.c  to-string.c  token.c  utils.c  vector.c
test/: main.c
